--- a/roles/radsecproxy/tasks/main.yml
+++ b/roles/radsecproxy/tasks/main.yml
@@ -40,6 +40,7 @@
   copy: >
     src=radsecproxy.init-d
     dest=/etc/init.d/radsecproxy
+    mode=755
   notify: restart radsecproxy
 
 - name: Enable radsecproxy init file
