--- a/group_vars/secrets.yml.example
+++ b/group_vars/secrets.yml.example
@@ -1,5 +1,6 @@
+myuni_idp_secret:
+otheruni_idp_secret:
+fticks_salt: 
 etlr_secret: 
 monitoring_secret:
-CLIENTNAME1_secret:
-CLIENTNAME2_secret:
 newrelic_license_key:
