--- a/roaming_operator.yml
+++ b/roaming_operator.yml
@@ -5,8 +5,11 @@
     - group_vars/secrets.yml
   roles:
     - radsecproxy
-    - newrelic
+    - { role: newrelic, when: play_newrelic == True }
 
   handlers:
     - name: restart radsecproxy
       service: name=radsecproxy state=restarted
+
+    - name: restart rsyslog
+      service: name=rsyslog state=restarted
