--- a/roaming_operator.yml
+++ b/roaming_operator.yml
@@ -3,6 +3,13 @@
   become: True
   vars_files:
     - group_vars/secrets.yml
+  
+  #Install Python2 on Ubuntu 16.04
+  gather_facts: False
+  pre_tasks:
+    - raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+    - setup: # aka gather_facts
+
   roles:
     - radsecproxy
     - { role: newrelic, when: play_newrelic == True }
@@ -10,6 +17,5 @@
   handlers:
     - name: restart radsecproxy
       service: name=radsecproxy state=restarted
-
     - name: restart rsyslog
       service: name=rsyslog state=restarted
