--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,8 @@
 [defaults]
 hostfile = inventories/development
+
+timeout = 30
+
 #remote_user = vagrant
 #private_key_file = ~/.vagrant.d/insecure_private_key
 #host_key_checking = false
