Check for Python2

--- a/roaming_operator.yml
+++ b/roaming_operator.yml
@@ -1,14 +1,15 @@
+- hosts: ro
+  become: True
+  gather_facts: False
+  tasks:
+  - name: install python 2
+    raw: test -e /usr/bin/python || (apt install -y python-minimal)
+
 - name: Install eduroam Roaming Operator
   hosts: ro
   become: True
   vars_files:
     - group_vars/secrets.yml
-  
-  #Install Python2 on Ubuntu 16.04
-  gather_facts: False
-  pre_tasks:
-    - raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
-    - setup: # aka gather_facts
 
   roles:
     - radsecproxy
