README, some styling and renaming the inventory template

--- a/roles/radsecproxy/tasks/main.yml
+++ b/roles/radsecproxy/tasks/main.yml
@@ -1,21 +1,24 @@
 - name: Install Compiler and stuff
-  apt: pkg={{ item }} update_cache=yes cache_valid_time=36000
+  apt: 
+    pkg: "{{ item }}"
+    update_cache: yes 
+    cache_valid_time: 36000
   with_items:
     - build-essential
     - nettle-dev
     - libssl-dev
 
 - name: Download Radsecproxy
-  get_url: >
-    url=https://software.nordu.net/radsecproxy/radsecproxy-{{ radsecproxy_version }}.tar.xz
-    dest=/opt/radsecproxy-{{ radsecproxy_version }}.tar.xz
-    checksum={{ radsecproxy_checksum }}
+  get_url:
+    url: https://software.nordu.net/radsecproxy/radsecproxy-{{ radsecproxy_version }}.tar.xz
+    dest: /opt/radsecproxy-{{ radsecproxy_version }}.tar.xz
+    checksum: "{{ radsecproxy_checksum }}"
 
 - name: Extract radsecproxy
-  unarchive: >
-    src=/opt/radsecproxy-{{ radsecproxy_version }}.tar.xz
-    dest=/opt
-    copy=no
+  unarchive:
+    src: /opt/radsecproxy-{{ radsecproxy_version }}.tar.xz
+    dest: /opt
+    copy: no
 
 - name: Configure radsecproxy
   command: ./configure --enable-fticks chdir=/opt/radsecproxy-{{ radsecproxy_version }}
@@ -31,17 +34,17 @@
 
 
 - name: Copy radsecproxy config file
-  template: >
-    src=radsecproxy.conf.j2
-    dest=/usr/local/etc/radsecproxy.conf
-    backup=yes
+  template:
+    src: radsecproxy.conf.j2
+    dest: /usr/local/etc/radsecproxy.conf
+    backup: yes
   notify: restart radsecproxy
 
 - name: Copy radsecproxy init file
-  copy: >
-    src=radsecproxy.init-d
-    dest=/etc/init.d/radsecproxy
-    mode=755
+  copy:
+    src: radsecproxy.init-d
+    dest: /etc/init.d/radsecproxy
+    mode: 755
   notify: restart radsecproxy
 
 - name: Enable radsecproxy init file
@@ -49,15 +52,15 @@
   notify: restart radsecproxy
 
 - name: Copy rsyslog file for sending FTICKS statistics information
-  template: >
-    src=rsyslog-radsecproxy.conf.j2
-    dest=/etc/rsyslog.d/22-rsyslog-radsecproxy.conf
-    mode=644
+  template:
+    src: rsyslog-radsecproxy.conf.j2
+    dest: /etc/rsyslog.d/22-rsyslog-radsecproxy.conf
+    mode: 644
   notify: restart rsyslog
 
 - name: Enable logrotation
-  copy: >
-    src=radsecproxy.log
-    dest=/etc/logrotate.d/radsecproxy
-    mode=644
+  copy:
+    src: radsecproxy.log
+    dest: /etc/logrotate.d/radsecproxy
+    mode: 644
   notify: restart rsyslog
