Replace etlr_secret with proxy_secret and add the default value for AfricaTLR

--- a/group_vars/secrets.yml.example
+++ b/group_vars/secrets.yml.example
@@ -1,6 +1,6 @@
 myuni_idp_secret:
 otheruni_idp_secret:
-fticks_salt: 
-etlr_secret: 
+proxy_secret: pP14DHkR
 monitoring_secret:
+fticks_salt:
 newrelic_license_key:
