Move radsecproxy-specific stuff into the role

--- a/roaming_operator.yml
+++ b/roaming_operator.yml
@@ -13,10 +13,4 @@
 
   roles:
     - radsecproxy
-    # - { role: newrelic, when: play_newrelic == True }
-
-  handlers:
-    - name: restart radsecproxy
-      service: name=radsecproxy state=restarted
-    - name: restart rsyslog
-      service: name=rsyslog state=restarted
+    - { role: newrelic, when: play_newrelic == True }
