--- a/roles/radsecproxy/handlers/main.yml
+++ b/roles/radsecproxy/handlers/main.yml
@@ -1,2 +1,5 @@
 ---
-# handlers file for radsecproxy
+- name: restart radsecproxy
+  service: name=radsecproxy state=restarted
+- name: restart rsyslog
+  service: name=rsyslog state=restarted
