--- a/roles/radsecproxy/vars/main.yml
+++ b/roles/radsecproxy/vars/main.yml
@@ -1,2 +1,4 @@
 ---
-# vars file for radsecproxy
+radsecproxy:
+  version: 1.6.8
+  checksum: sha256:823ebee37c88974db93485ab67c449bc9fcd45117683f57d83b36e6bf16b6a8f
