Add example value to secrets.yml.example

--- a/group_vars/secrets.yml.example
+++ b/group_vars/secrets.yml.example
@@ -1,6 +1,7 @@
-myuni_idp_secret:
-otheruni_idp_secret:
+myuni_idp_secret: MySecret
+otheruni_idp_secret: MyOtherSecret
 proxy_secret: pP14DHkR
+# Negotiate a shared secret with the monitoring team at SRCE
 monitoring_secret:
 fticks_salt:
 newrelic_license_key:
