--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,22 @@
----
 language: python
-python: "2.7"
-
-# Use the new container infrastructure
+python: '2.7'
 sudo: true
-
-# Install ansible
 addons:
   apt:
     packages:
     - python-pip
 
+before_install:
+- openssl aes-256-cbc -K $encrypted_2c5e09025b17_key -iv $encrypted_2c5e09025b17_iv
+  -in secrets.yml.enc -out group_vars/secrets.yml -d
+
 install:
-  # Install ansible
-  - pip install ansible
-
-  # Check ansible version
-  - ansible --version
-
-  # Create ansible.cfg with correct roles_path
-  - printf '[defaults]\nroles_path=../' >ansible.cfg
+- pip install ansible
+- ansible --version
+- printf '[defaults]\nroles_path=../' >ansible.cfg
 
 script:
-  # Basic role syntax check
-  - ansible-playbook roaming_operator.yml -i inventories/test --syntax-check
+- ansible-playbook roaming_operator.yml -i inventories/development --syntax-check
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
