Actually provision development

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
 
 script:
 - ansible-playbook roaming_operator.yml -i inventories/development --syntax-check
+- ansible-playbook roaming_operator.yml -i inventories/development
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
