Secret for Regional Level Roaming

--- a/group_vars/secrets.yml.example
+++ b/group_vars/secrets.yml.example
@@ -1,7 +1,13 @@
 myuni_idp_secret: MySecret
 otheruni_idp_secret: MyOtherSecret
 proxy_secret: pP14DHkR
+
 # Negotiate a shared secret with the monitoring team at SRCE
 monitoring_secret:
 fticks_salt:
+
+##Regional Level Roaming
+rlr_secret: 
+
+# NewRelic Monitoring
 newrelic_license_key:
