Use African proxies - instead of Europeans - as default forward

--- a/group_vars/secrets.yml.example
+++ b/group_vars/secrets.yml.example
@@ -1,13 +1,20 @@
-myuni_idp_secret: MySecret
-otheruni_idp_secret: MyOtherSecret
-proxy_secret: pP14DHkR
+## Shared secrets for institutions in your federation
+## Choose unique names for the keys by replacing the <___> parts
+## Reference accordingly in group variables file under institutions
+<MYUNI>_idp_secret: MyUniSecret
+<OTHERUNI>_idp_secret: MyOtherUniSecret
 
-# Negotiate a shared secret with the monitoring team at SRCE
-monitoring_secret:
-fticks_salt:
+##Regional Level Roaming/Proxies
+## Europe
+#etlr1_secret: EuropeanSecret
+#etlr2_secret: EuroSecret
+##Africa
+atlr_wacren: AfricaSecret
+atlr_ubuntunet: SecretAfrica
 
-##Regional Level Roaming
-rlr_secret: 
+# eduroam Monitoring/Statistics: Get a shared secret from eduroam OT
+monitoring_secret: MonSecret
+#fticks_salt: CurrentlyNotInUse
 
 # NewRelic Monitoring
-newrelic_license_key:
+newrelic_license_key: 123123
