--- a/roaming_operator.yml
+++ b/roaming_operator.yml
@@ -1,9 +1,11 @@
-- hosts: ro
+- name: Make sure Python 2 is available
+  hosts: ro
   become: True
   gather_facts: False
   tasks:
   - name: install python 2
     raw: test -e /usr/bin/python || (apt install -y python-minimal)
+
 
 - name: Install eduroam Roaming Operator
   hosts: ro
@@ -13,4 +15,3 @@
 
   roles:
     - radsecproxy
-    - { role: newrelic, when: play_newrelic == True }
