Rename secret variables for ATLR

--- a/group_vars/secrets.yml.example
+++ b/group_vars/secrets.yml.example
@@ -1,16 +1,16 @@
 ## Shared secrets for institutions in your federation
 ## Choose unique names for the keys by replacing the <___> parts
 ## Reference accordingly in group variables file under institutions
-<MYUNI>_idp_secret: MyUniSecret
-<OTHERUNI>_idp_secret: MyOtherUniSecret
+<MYUNI>_secret: MyUniSecret
+<OTHERUNI>_secret: MyOtherUniSecret
 
 ##Regional Level Roaming/Proxies
 ## Europe
 #etlr1_secret: EuropeanSecret
 #etlr2_secret: EuroSecret
 ##Africa
-atlr_wacren: AfricaSecret
-atlr_ubuntunet: SecretAfrica
+atlr_wacren_secret: AfricaSecret
+atlr_ubuntunet_secret: SecretAfrica
 
 # eduroam Monitoring/Statistics: Get a shared secret from eduroam OT
 monitoring_secret: MonSecret
