Ansible Galaxy role for NewRelic. Role needs to be installed first: ansible-galaxy install franklinkim.newrelic

--- a/roaming_operator.yml
+++ b/roaming_operator.yml
@@ -15,3 +15,13 @@
 
   roles:
     - radsecproxy
+
+# - name: Install NewRelic
+#   hosts: ro
+#   become: True
+#   roles:
+#     - { role: franklinkim.newrelic, when: play_newrelic == True }
+#   vars_files:
+#     - group_vars/secrets.yml
+#   vars:
+#     newrelic_service_state: started
