Touch log files for radsecproxy and fticks

--- a/roles/radsecproxy/tasks/main.yml
+++ b/roles/radsecproxy/tasks/main.yml
@@ -57,6 +57,22 @@
     mode: 644
   notify: restart rsyslog
 
+- name: Create radsecproxy logfile
+  file:
+    path: /var/log/radsecproxy.log
+    state: touch
+    owner: syslog
+    group: adm
+  notify: restart rsyslog
+
+- name: Create fticks logfile
+  file:
+    path: /var/log/fticks.log
+    state: touch
+    owner: syslog
+    group: adm
+  notify: restart rsyslog
+
 - name: Enable logrotation
   copy:
     src: radsecproxy.log
