Enable multiple realms per institution

--- a/group_vars/secrets.yml.example
+++ b/group_vars/secrets.yml.example
@@ -14,4 +14,4 @@ atlr_ubuntunet_secret: SecretAfrica
 
 # eduroam Monitoring/Statistics: Get a shared secret from eduroam OT
 monitoring_secret: MonSecret
-#fticks_salt: CurrentlyNotInUse
+fticks_salt: CurrentlyNotInUse
